--- a/style.css
+++ b/style.css
@@ -31,6 +31,12 @@ body, html {
     color:  #53B1B3;
 }
 
+.center{
+    align: center; 
+    padding-top: 4%;
+    padding-bottom: 4%; 
+}
+
 .partner{
     margin: auto;
 }
@@ -40,7 +46,7 @@ body, html {
     max-height: 80%;
 }
 
-.features{
+.features {
     padding-top: 4%;
     padding-bottom: 4%; 
     
@@ -56,9 +62,7 @@ body, html {
     padding-top: 4%;
     padding-bottom: 4%; 
 }
-.featuresSumImg{
-    margin-left: -10%;
-}
+
 
 .featuresImgSum{
     max-width: 75%;
@@ -66,4 +70,7 @@ body, html {
 }
 .featureItem{
     margin-top: 5%;
+}
+.wispadminPic{
+    width: 90%; 
 }
