--- a/style.css
+++ b/style.css
@@ -56,13 +56,17 @@ body, html {
     max-width: 100%;
     max-height: 100%;
 }
+.productImage{
+    max-width: 100%;
+    max-height: 100%;
+    margin-top: 4%; 
+}
 
 .featuresSum{
     background-color:  #53B1B3;
     padding-top: 4%;
     padding-bottom: 4%; 
 }
-
 
 .featuresImgSum{
     max-width: 75%;
@@ -73,4 +77,11 @@ body, html {
 }
 .wispadminPic{
     width: 90%; 
+}
+.featureRow{
+    padding-top: 4%; 
+}
+
+footer{
+    background-color: lightgray;
 }
