--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body, html {
     height: 100%;
+    font-family: 'Raleway', sans-serif;
 }
 
 .navbar{
@@ -9,10 +10,24 @@ body, html {
 /* The hero image */
 .hero-image {
     /* The image used */
-    background-image: url(assets/bg.jpg); 
+    background-color: blue; 
 
     /* Set a specific height */
     height: 600px;
+
+    /* Position and center the image to scale nicely on all screens */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
+/* The hero image */
+.hero-image-2 {
+    /* The image used */
+    background-color: blue; 
+
+    /* Set a specific height */
+    height: 400px;
 
     /* Position and center the image to scale nicely on all screens */
     background-position: center;
@@ -28,7 +43,7 @@ body, html {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    color:  #53B1B3;
+    color:  white;
 }
 
 .center{
@@ -36,6 +51,7 @@ body, html {
     padding-top: 4%;
     padding-bottom: 4%; 
 }
+
 
 .partner{
     margin: auto;
@@ -59,7 +75,9 @@ body, html {
 .productImage{
     max-width: 100%;
     max-height: 100%;
-    margin-top: 4%; 
+    margin-top: 4%;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    
 }
 
 .featuresSum{
@@ -76,10 +94,17 @@ body, html {
     margin-top: 5%;
 }
 .wispadminPic{
-    width: 90%; 
+    width: 90%;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 .featureRow{
     padding-top: 4%; 
+}
+
+.lineBreak{
+    background-color: #53B1B3; 
+    height: 2px; 
+    width: 40%; 
 }
 
 footer{
